同步于: 12月6日1时2分

--- a/pages/p3/954769.md
+++ b/pages/p3/954769.md
@@ -1,4 +1,4 @@
-### 17则古训赠当今(图)
+### 暗中阻华人回国手段曝光 中共遭耻笑(图)
 ------------------------
 
 #### [首页](https://github.com/gfw-breaker/banned-news3/blob/master/README.md) &nbsp;&nbsp;|&nbsp;&nbsp; [法轮功真相](https://github.com/begood0513/basic/blob/master/README.md)  &nbsp;&nbsp;|&nbsp;&nbsp; [手把手翻墙教程](https://github.com/gfw-breaker/guides/wiki)  &nbsp;&nbsp;|&nbsp;&nbsp; [一键翻墙软件](https://github.com/gfw-breaker/nogfw/blob/master/README.md)  
@@ -7,9 +7,9 @@
 
 <div class="article_right" style="fone-color:#000">
  <p style="text-align:center">
-  <img alt="行舍其华，言去其辩。（看中国：手绘插画 志清）" src="https://img2.secretchina.com/pic/2019/4-8/p2398774a771091283-ss.jpg" style="height:337px; width:600px"/>
+  <img alt="" src="https://img3.secretchina.com/pic/2020/6-5/p2705622a112990113-ss.jpg"/>
   <br>
-   行舍其华，言去其辩。（看中国：手绘插画 志清）
+   武汉肺炎疫情爆发之后，中共不断出台规定，给中国人回国造成障碍。（图片来源：JOHANNES EISELE/AFP via Getty Images）
    <span id="hideid" name="hideid" style="color:red;display:none;">
     <span href="https://www.secretchina.com">
     </span>
@@ -29,59 +29,52 @@
   </div>
  </div>
  <p>
+  【看中国2020年12月6日讯】因
   <strong>
-   <span href="https://www.secretchina.com/news/gb/tag/古训" target="_blank">
-    古训
+   中共
+  </strong>
+  隐瞒疫情，造成全球
+  <strong>
+   <span href="https://www.secretchina.com/news/gb/tag/武汉肺炎" target="_blank">
+    武汉肺炎
    </span>
   </strong>
-  是先人
+  疫情的大爆发。近日，河北多地的内部文件曝光了中共外事部门劝阻海外
   <strong>
-   智慧
+   华人
   </strong>
-  的
-  <strong>
-   结晶
-  </strong>
-  ，已在国人心中流淌千百年，其中蕴藏的智慧，应用在待人处世上，常有意想不到的效果，足以让人受用一生。
+  回国的手段，这些内容鲜有公开报导。
   <span id="hideid" name="hideid" style="color:red;display:none;">
    <span href="https://www.secretchina.com">
    </span>
   </span>
  </p>
  <p>
-  古训今译，古训今鉴，读而思，思而行，行而达。下面收集了17句古训金言，望尔获益。
+  据Epochtimes获得的独家内部文件显示，武汉肺炎疫情爆发之后，中共不断出台规定，给中国人回国造成障碍。今年3月中共民航局出台的“五个一”政策，更是让
+  <span href="https://www.secretchina.com/news/gb/tag/华人" target="_blank">
+   华人
+  </span>
+  回家之路变得艰难。直到目前还有很多华人滞留在海外，无法回国。
  </p>
  <p>
-  【古训1】刚直，则当忘身以为国，履正以无偏。（ 据《金史•王修传》）
-  <br>
-   【今译】刚直之人，就应当为国家舍死忘生，做事正直。而不偏听偏信。
-  </br>
+  大纪元获得河北衡水市故城县疫情防指办（下称：故城防指办）于2020年4月9日，向衡水市疫情防指办外事服务组作出的《关于对境外欲回国
+  <span href="https://www.secretchina.com" target="_blank">
+   中国
+  </span>
+  籍人员劝导工作情况的汇报》。文件透露，故城防指办“全力以赴做好境外人员欲回国劝导工作”，“及时安排摸清境外停留人员底数”。
  </p>
  <p>
-  【古训2】岂有为人，知过而不能改者乎!（据《元史•木华黎传》）
-  <br>
-   【今译】 难道有人知道做错了，还不能改正的吗?（知错而不改，能叫人吗？）
-  </br>
+  经查，故城县在境外停留有5244人。文件称，“及时掌握近期是否有回国意愿和健康状况，对于有意向返故的人员，‘提前进行干预’”。
  </p>
  <p>
-  【古训3】伎巧为丧国斧斤，珠玉为荡心醯毒。侈丽纤美，不可以不遏。志骄于业泰，体逸于时安。（据《新唐书•后妃传》(上)）
-  <br>
-   【今译】奸诈诡谲是丧亡国家的斧头，珍珠美玉是心志摇荡的毒酒。奢华纤巧之美，不可以不加阻止。志气骄惰，是由于事业的安泰；身体淫乐，是由于处境的安闲。
-  </br>
+  同时，
+  <span href="https://www.secretchina.com/news/gb/tag/中共" target="_blank">
+   中共
+  </span>
+  当局还“劝导”中国人不要返华。文件透露，“对近期非必须入境来故人员，严格按照上级要求做好‘政策解读’，宣传省市县作为‘首都政治护城河的特殊地位和严格的管控措施’，分析国内外严峻形势，‘引导’其自觉在其所在国进行自我隔离，减少外出。”
  </p>
  <p>
-  【古训4】任重道悠，利深祸速。（据《后汉书•皇后纪》上)
-  <br>
-   【今译】官职重大的人，任职的时间越长，求利越多，招祸越快。
-   <br>
-    <br>
-     【古训5】自古圣帝必以俭约为美，乱主必以奢侈贻患。（据《魏书•韩麒麟传》）
-     <br>
-      【今译】自古以来，圣明的帝王一定把俭朴当作好事；而昏庸的君主则一定因为奢侈，而种下祸患。
-     </br>
-    </br>
-   </br>
-  </br>
+  在“2月29日以来入境和沟通情况”一节中，文件透露，2月29日以来有意愿入境回国的有51人，经所谓的“劝导”，有8人主动放弃了回国意愿。并称“工作人员主要采取聆听、分析、劝导、提醒等方式进行沟通”。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -96,9 +89,7 @@
   </div>
  </center>
  <p>
-  【古训6】自古以来，身居富贵，能知止足者，甚少。（据《旧唐书•李靖传》）
-  <br/>
-  【今译】自古以来，身居富贵而能知道适可而止的人，很少。
+  文件还提到“成功案例”。如南湖现代城小区共有境外人员16人，其中有入境回国意愿10人，经分包单位“劝导”，现有6人放弃回国。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -113,9 +104,7 @@
   </div>
  </center>
  <p>
-  【古训7】行舍其华，言去其辩。（据《晋书•应贞传》）
-  <br/>
-  【今译】 行动应舍弃浮华（做事要诚实），言论要舍弃诡辩（说话要正直）。
+  不过，文件也承认民众不相信中共，在“沟通中存在的困难主要有三点”，其中第二点是，“有的欲回国人员对工作人员不信任”。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -130,9 +119,9 @@
   </div>
  </center>
  <p>
-  【古训8】行道之人，德行文学为根株，正直刚毅为柯叶。有根无叶，或可俟时；有叶无根，膏雨所不能活也。至于孝慈、友悌、忠信、笃行，乃食之醯酱，可一日无哉?   （据《新唐书•柳公绰传》）
-  <br/>
-  【今译】遵行大道的人，以德行和文学为根株，以正直刚毅为枝叶。有根没有叶，尚且可以等待时日；有叶没有根，则肥沃的雨水也不能救活它。至于孝慈、友悌、忠信、诚实，犹如吃的酱醋，能够一天没有吗?
+  <strong>
+   中共河北沧州多部门劝阻华人不要回国
+  </strong>
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -147,9 +136,7 @@
   </div>
  </center>
  <p>
-  【古训9】行正道，循礼义，敦友爱，尽公忠。（据《清史稿•太宗本纪》)
-  <br/>
-  【今译】按正确的道理、准则做事，遵循礼法、道义，忠诚地促成友爱，竭力为公事效忠。
+  沧州市沧县政府办公室2020年6月5日的《关于加强我县境外务工人员疫情防控工作的情况汇报》也显示，中共“劝阻”华人不要回国。文件泄漏，当局“对在境外务工人员全部精准建档立卡”、“摸清拟返沧人员信息和行动轨迹”。经过“宣讲说服”，有52人放弃回国想法。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -164,9 +151,7 @@
   </div>
  </center>
  <p>
-  【古训10】杀身成仁，虽死犹生。（据《明史•晋恭王朱桐传》）
-  <br/>
-  【今译】杀身成仁，即使是死了，也像活着一样受人尊敬。
+  文件称，该县“广泛发动境外华人社团、商会等组织，做好境外务工人员‘安抚和稳定工作’，全力劝导其尽量留在当地”。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -181,14 +166,7 @@
   </div>
  </center>
  <p>
-  【古训11】名者，公器也。不可多取。（据《三国志•张温传》）
-  <br/>
-  【今译】名位，是天下人所共有的。不可以一个人贪心多取。
-  <br/>
-  <br/>
-  【古训12】危邦不入，乱邦不居。（据《晋书•张方传》）
-  <br/>
-  【今译】处于危险之中的国家，不要进入；处于动乱的国家，不要停留。
+  在沧州市政府国资委《关于境外疫情工作汇报》中称，要求3家有境外务工人员驻沧央企做好“稳控工作”，不能“无序回国”，并劝导其暂不回国。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -207,9 +185,7 @@
   </ins>
  </center>
  <p>
-  【古训13】兆始恶者有终殃，积不善者无余庆。（据《北史•崔宏传》）
-  <br/>
-  【今译】出现坏的征兆，最终必有灾祸；长期做坏事的人，不会有好的结局。
+  在疫情下，中共还以“抗疫”之名，利用公安大数据联合多部门对全民进行监控。同时，中共还利用微信等方式紧盯海外华人。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -224,9 +200,9 @@
   </div>
  </center>
  <p>
-  【古训14】汝惟不矜，天下莫与汝争能；汝惟不伐，天下莫与汝争功。（据《隋书•李谔传》）
-  <br/>
-  【今译】只要你不自以为贤能，天下就没有与你竞争才能的人；只要你不自我夸耀，天下就没有与你争夺功劳的人。
+  <strong>
+   不让公民回国 中共遭人耻笑
+  </strong>
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -241,9 +217,7 @@
   </div>
  </center>
  <p>
-  【古训15】进不知退，取祸之道也！（据《新唐书•高智周传》）
-  <br/>
-  【今译】只知前进不知后退，是招取祸败的道途。
+  时政评论员李林一表示，河北各地县级部门内部文件都在劝阻中国人回国，可见中共是大范围内实施这样的措施。然而，在发生天灾人祸时，大多数国家都会积极撤侨。由于中共隐瞒疫情，造成全球灾难，现在中共反而制定诸多政策阻止国人回国。世界上除了中共，没有任何一个国家是这么干的，从中也可见中共的无耻。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -258,26 +232,7 @@
   </div>
  </center>
  <p>
-  【古训16】志骄则好生事，器小则无远图。（据《明史•太祖本纪》(三)）
-  <br/>
-  【今译】志气高傲，容易惹是生非；器量狭小，就不会有长远打算。
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p>
-  【古训17】声过其实，古人所不取。攻乎异端，为政之甚害。（据《晋书•张闿》）
-  <br/>
-  【今译】声誉超过本人的实际情况，这是古人所不赞成的。攻击不同的观点与学说，对治理国家，是有严重危害的！
+  李林一认为，中共这种给中国人回国制造重重障碍、不断要求中国人不要回国的行为，遭天下人的耻笑。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -341,13 +296,13 @@
 
 <hr/>
 手机上长按并复制下列链接或二维码分享本文章：<br/>
-https://github.com/gfw-breaker/banned-news3/blob/master/pages/p7/938210.md <br/>
-<a href='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p7/938210.md'><img src='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p7/938210.md.png'/></a> <br/>
-原文地址（需翻墙访问）：https://www.secretchina.com/news/gb/2020/12/02/938210.html
+https://github.com/gfw-breaker/banned-news3/blob/master/pages/p3/954769.md <br/>
+<a href='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p3/954769.md'><img src='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p3/954769.md.png'/></a> <br/>
+原文地址（需翻墙访问）：https://www.secretchina.com/news/gb/2020/12/06/954769.html
 
 
 ------------------------
 #### [首页](https://github.com/gfw-breaker/banned-news3/blob/master/README.md) &nbsp;|&nbsp; [一键翻墙软件](https://github.com/gfw-breaker/nogfw/blob/master/README.md) &nbsp;| [《九评共产党》](https://github.com/gfw-breaker/9ping.md/blob/master/README.md#九评之一评共产党是什么) | [《解体党文化》](https://github.com/gfw-breaker/jtdwh.md/blob/master/README.md) | [《共产主义的终极目的》](https://github.com/gfw-breaker/gczydzjmd.md/blob/master/README.md)
 
 
-<img src='http://gfw-breaker.win/banned-news3/pages/p7/938210.md' width='0px' height='0px'/>
+<img src='http://gfw-breaker.win/banned-news3/pages/p3/954769.md' width='0px' height='0px'/>
