同步于: 12月6日1时52分

--- a/pages/soh6/450646.md
+++ b/pages/soh6/450646.md
@@ -133,6 +133,23 @@
  <p>
   彼得森表示，马里科帕县等地存在大量选举违规行为。他说：“对Dominion供应商的指控令人担忧......县政府需要对Dominion软件进行法证审计，以确保计票结果的准确性。”亚利桑那州于11月30日举行大选舞弊听证会，多位证人就Dominion计票机涉欺诈等舞弊现象发表了宣誓证词。
  </p>
+ <h3 class="title">
+  76位宾州众议员联署 要求重新任命该州选举人团成员
+ </h3>
+ <p class="meta-top">
+  12月4日，在宾州的141位共和党众议员中，有76位议员联署宾州议会，要求重新任命宾州选举人团成员。他们还要求该州任命一位独立检察官，专门调查该州2020年大选舞弊问题。
+ </p>
+ <p>
+  议员们在信中表示，他们无法接受宾州的选举结果，所以不会支持宾州
+  <ok href="/term/2718">
+   民主党
+  </ok>
+  掌控的政府任命的20名选举人团成员。他们还谴责该州的
+  <ok href="/term/2718">
+   民主党
+  </ok>
+  州长伍尔夫（Tom Wolf）多次破坏该州对于2020年大选的保护措施，允许该州大规模地扩大邮寄选票的使用。
+ </p>
  <h3>
   诉讼被内华达州地区法院驳回 川普将上诉内州高院
  </h3>
