--- a/pages/nf4514/n12597952.md
+++ b/pages/nf4514/n12597952.md
@@ -5,9 +5,9 @@
 
 
 
-<div><img alt="【大选更新12.5】当选议员支持川普法律战" class="attachment-djy_600_400 size-djy_600_400 wp-post-image" src="https://i.epochtimes.com/assets/uploads/2020/12/lauren-boebert-2-1200x800-600x400.jpg"/>
+<div><img alt="【大选更新12.5】鲍威尔：川普有充足时间翻盘" class="attachment-djy_600_400 size-djy_600_400 wp-post-image" src="https://i.epochtimes.com/assets/uploads/2020/11/Epoch_Times-Giuliani-Powell-510A2823-1200x800-600x400.jpg"/>
 <div class="caption">
- 现已当选的劳伦·伯伯特（Lauren Boebert）于2020年10月10日在科罗拉多州科洛纳（Colona）举行的竞选集会上向支持者发表讲话。（JASON CONNOLLY/AFP via Getty Images）
+ 图为2020年11月19日，在华盛顿共和党全国委员会总部举行的新闻发布会上，西德尼·鲍威尔（Sidney Powell）律师在川普律师、前纽约市市长鲁迪·朱利安尼（L）的陪同下对媒体讲话。(Charlotte Cuthbertson/The Epoch Times)
 </div></div><hr/>
 
 #### [ 🎬  翻墙必看视频（YouTube热门频道、网站代理、时事热点、历史事件 ...）](https://github.com/gfw-breaker/links/blob/master/banned.md)
