--- a/pages/nsc412/n12597952.md
+++ b/pages/nsc412/n12597952.md
@@ -1,13 +1,13 @@
-### 【大选更新12.5】当选议员支持川普法律战
+### 【大选更新12.5】鲍威尔：川普有充足时间翻盘
 ------------------------
 
 #### [首页](https://github.com/gfw-breaker/banned-news3/blob/master/README.md) &nbsp;&nbsp;|&nbsp;&nbsp; [法轮功真相](https://github.com/begood0513/basic/blob/master/README.md)  &nbsp;&nbsp;|&nbsp;&nbsp; [手把手翻墙教程](https://github.com/gfw-breaker/guides/wiki)  &nbsp;&nbsp;|&nbsp;&nbsp; [一键翻墙软件](https://github.com/gfw-breaker/nogfw/blob/master/README.md)  
 
 
 
-<div><img alt="【大选更新12.5】当选议员支持川普法律战" class="attachment-djy_600_400 size-djy_600_400 wp-post-image" src="https://i.epochtimes.com/assets/uploads/2020/12/lauren-boebert-2-1200x800-600x400.jpg"/>
+<div><img alt="【大选更新12.5】鲍威尔：川普有充足时间翻盘" class="attachment-djy_600_400 size-djy_600_400 wp-post-image" src="https://i.epochtimes.com/assets/uploads/2020/11/Epoch_Times-Giuliani-Powell-510A2823-1200x800-600x400.jpg"/>
 <div class="caption">
- 现已当选的劳伦·伯伯特（Lauren Boebert）于2020年10月10日在科罗拉多州科洛纳（Colona）举行的竞选集会上向支持者发表讲话。（JASON CONNOLLY/AFP via Getty Images）
+ 图为2020年11月19日，在华盛顿共和党全国委员会总部举行的新闻发布会上，西德尼·鲍威尔（Sidney Powell）律师在川普律师、前纽约市市长鲁迪·朱利安尼（L）的陪同下对媒体讲话。(Charlotte Cuthbertson/The Epoch Times)
 </div></div><hr/>
 
 #### [ 🎬  翻墙必看视频（YouTube热门频道、网站代理、时事热点、历史事件 ...）](https://github.com/gfw-breaker/links/blob/master/banned.md)
@@ -51,7 +51,43 @@
  以下是美国大选情况的实时更新：
 </h4>
 <h3>
- 鲍威尔：川普有充足时间推翻大选结果
+ 鲍威尔乔州诉讼案将于12月7日举行听证会
+</h3>
+<p>
+ 美国知名律师西德尼·鲍威尔（Sidney Powell）在乔州提交的一份诉讼，旨在说服法官允许外部专家检查Dominion投票系统机。相关听证会订于12月7日举行。
+</p>
+<p>
+ 美国地区法官蒂莫西·巴顿（Timothy Batten Sr.）在上诉法院驳回原告的上诉后安排了这次听证会。原告由鲍威尔和其他律师代表。
+</p>
+<p>
+ 巴顿在11月29日晚间连发三次临时禁令，最终禁止该州选举官员清除和修改三个县的Dominion投票机数据。
+</p>
+<p>
+ 三次禁令中，后两次均是推翻上一次的命令，最终做出上述裁决。禁令中涉及的三个县分别是科布县（Cobb County）、格威纳特县（Gwinnett County）和切罗基县（Cherokee County）。
+</p>
+<p>
+ 鲍威尔认为，该禁令不够充分，并向美国第十一巡回上诉法院提出上诉，要求在全州范围内实施禁令。
+</p>
+<p>
+ 上诉法院最终否决这一上诉。巴顿安排在周一（12月7日）上午10点就鲍威尔的诉讼案举行听证。
+</p>
+<h3>
+ 美议员：司法部和FBI恐为选举欺诈设置障碍
+</h3>
+<p>
+ 德克萨斯州共和党联邦众议员迈克尔·克劳德（Michael Cloud）周五指责司法部对川普总统及其他人揭露选举欺诈设置了“障碍”。
+</p>
+<p>
+ 克劳德在接受“Just the News”节目“Water Cooler”采访时说，“有很多证据可以看到，当然有足够的证据可以展开调查。”
+</p>
+<p>
+ 当被问及为何司法部和联邦调查局（FBI）似乎都没有调查选举欺诈事件时，克劳德回答说，“如果我们有毅力的话，有些指控是很容易追查的 ……但我们看到的不是（司法部和FBI）对此事的关注，而是路障。”
+</p>
+<p>
+ 克劳德对猜测联邦官员可能采取的行动持谨慎态度，但他说：“最终，司法部可能会提出搜查令。他们可能会扣押证据。他们现在可能会做很多事情。而这几乎就像是他们在等着证据来找他们。”
+</p>
+<h3>
+ 鲍威尔：川普有充足时间翻盘
 </h3>
 <p>
  美国德州知名律师西德尼·鲍威尔（Sidney Powell）周五（12月4日）接受Newsmax电视台“Stinchfield”节目采访时说，川普总统的法律团队有充足的时间来推翻2020年大选结果。
