同步于: 12月6日4时52分

--- a/pages/nf4514/n12597952.md
+++ b/pages/nf4514/n12597952.md
@@ -122,7 +122,7 @@
    上诉法院最终否决这一上诉。巴顿安排在周一（12月7日）上午10点就鲍威尔的诉讼案举行听证。
   </p>
   <h3>
-   美议员：司法部和FBI恐为选举欺诈设置障碍
+   美议员：司法部和FBI恐为揭露选举欺诈设置障碍
   </h3>
   <p>
    德克萨斯州共和党联邦众议员迈克尔·克劳德（Michael Cloud）周五指责司法部对川普总统及其他人揭露选举欺诈设置了“障碍”。
