--- a/pages/p2/954812.md
+++ b/pages/p2/954812.md
@@ -1,4 +1,4 @@
-### 为川普染病而欢呼的人 恐怕都笑早了(图)
+### 学者分析习近平加速终结中共的三个理由(图)
 ------------------------
 
 #### [首页](https://github.com/gfw-breaker/banned-news3/blob/master/README.md) &nbsp;&nbsp;|&nbsp;&nbsp; [法轮功真相](https://github.com/begood0513/basic/blob/master/README.md)  &nbsp;&nbsp;|&nbsp;&nbsp; [手把手翻墙教程](https://github.com/gfw-breaker/guides/wiki)  &nbsp;&nbsp;|&nbsp;&nbsp; [一键翻墙软件](https://github.com/gfw-breaker/nogfw/blob/master/README.md)  
@@ -7,9 +7,9 @@
 
 <div class="article_right" style="fone-color:#000">
  <p style="text-align: center;">
-  <img alt="" src="https://img3.secretchina.com/pic/2020/6-3/p2703372a939531857-ss.jpg" style="height:337px; width:600px"/>
+  <img alt="美国华裔政府学教授裴敏欣认为，习近平可能并未真正吸取苏共崩溃的教训，他的新斯大林主义可能使他成为中共一党专制的掘墓人。" src="https://img3.secretchina.com/pic/2020/6-30/p2722222a731411481-ss.jpg" style="height:337px; width:600px"/>
   <br>
-   川普总统手捧圣经站在圣约翰圣公会教堂前（图片来源：DCBRENDAN SMIALOWSKI/AFP/Getty Images）
+   美国华裔政府学教授裴敏欣认为，习近平可能并未真正吸取苏共崩溃的教训，他的新斯大林主义可能使他成为中共一党专制的掘墓人。（图片来源:LEO RAMIREZ/AFP via Getty Images）
    <span id="hideid" name="hideid" style="color:red;display:none;">
     <span href="https://www.secretchina.com">
     </span>
@@ -21,50 +21,86 @@
 
 ---
 
-#### 💥 [《伪火》 - 天安门自焚真相 ](http://158.247.195.190:10000/videos/blog/weihuo.html)&nbsp; |&nbsp; [“1400例”谎言揭秘  ](http://158.247.195.190:10000/videos/blog/jiexi1400.html)
-
 #### [ 🎬  翻墙必看视频（YouTube热门频道、网站代理、时事热点、历史事件 ...）](https://github.com/gfw-breaker/links/blob/master/banned.md)
+
+#### [ 💥  禁书下载（政治、经济、人权、民主自由、文革、六四 ...）](https://github.com/gfw-breaker/books/blob/master/README.md)
 
 
   </div>
  </div>
  <p>
-  【看中国2020年10月4日讯】
-  <span href="https://www.secretchina.com/news/gb/tag/川普" target="_blank">
-   川普
-  </span>
-  （特朗普）在美国时间10月1日晚间确诊新冠的消息传出后，立即引发了国内网络的狂欢。
+  【看中国2020年12月6日讯】（看中国记者李文隆综合报导）
+  <strong>
+   <span href="https://www.secretchina.com/news/gb/tag/习近平" target="_blank">
+    习近平
+   </span>
+  </strong>
+  曾警告中共记取前
+  <strong>
+   苏联
+  </strong>
+  教训，声称“竟无一人是男儿”。但美国华裔政府学教授裴敏欣认为，习近平可能并未真正吸取苏共崩溃的教训，他的新斯大林主义可能使他成为
+  <strong>
+   中共一党专制
+  </strong>
+  的掘墓人。
   <span id="hideid" name="hideid" style="color:red;display:none;">
    <span href="https://www.secretchina.com">
    </span>
   </span>
  </p>
  <p>
-  央视新闻的微博下，短短几个小时内，数十万人为此点赞，被赞最多的回复是“希望人出事”“国庆献礼”“恭喜夺冠”“众望所归”“新冠找到真爱”等，每一条几乎都有数万的点赞。脑袋在美帝被夹过的司马南发消息称：“共和国生日……七十四岁的人不失时机送上礼物。”在普通人的朋友圈中，也出现了大量
-  <span href="https://www.secretchina.com/news/gb/tag/幸灾乐祸" target="_blank">
-   幸灾乐祸
+  裴敏欣是美国克莱蒙特・麦肯纳学院（Claremont McKenna）政府学教授，他将
+  <span href="https://zh.m.wikipedia.org/zh-hans/%E4%B9%A0%E8%BF%91%E5%B9%B3" target="_blank">
+   习近平
   </span>
-  的刷屏。
+  上台后以吸取苏联垮台教训为由，加速集权、加强一党专政的路线称之为“新斯大林主义”（Neo-Stalinism）。
  </p>
  <p>
-  一个手机店贴出广告“为庆祝特朗普夫妻确诊新冠，全场手机直降……”；有人拉出“恭喜特朗普夫妇喜提
-  <span href="https://www.secretchina.com/news/gb/tag/新冠肺炎" target="_blank">
-   新冠肺炎
-  </span>
-  ”的横幅；有媒体在街头随机采访，大妈掩饰不住激动的心情，高呼“普天同庆”……
+  12月3日，裴敏欣在美国民主基金会和加拿大驻美使馆联合举办的全球民主年度讲座上，指及习近平策划了一场新斯大林主义的政治革命。裴敏欣认为新斯大林主义具有自我毁灭性，以至于有可能削弱而不是加强一党统治。
  </p>
  <p>
-  而与此同时，多国领导人都对川普夫妇送出了祝福。英国、欧盟、印度、日本、波兰、以色列……甚至连死对头俄罗斯都在第一时间表达问候。
+  据美国之音，裴敏欣提出了三个支持其推测的理由：
  </p>
  <p>
-  911之后，见识国人底色的机会很多，但可能这一次算是集小成。他们不会恨身边近在咫尺的不平事，但是就是要恨一个万里之外和自己没有关联的老头。好像上不起学，看不起病或者买不起房就是这个老头导致的。
+  第一是权力过度集中使习走上不归路。
  </p>
  <p>
-  凡事
+  裴敏欣说，“权力过度集中导致普遍官僚消极懈怠，决策过程缺乏多样性观点，采取过度冒险政策，以及无法自我纠正错误”。
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p>
+  习近平上台后废除集体领导制和国家领导人任期限制，开展大规模反腐运动，灌输新意识形态，清洗党内异己，对民间社会和少数族裔的打压不断升级，提倡国家资本主义，寻求对抗西方的外交政策。
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p>
+  过去八年习近平推行一带一路计划，在南
   <span href="https://www.secretchina.com" target="_blank">
    中国
   </span>
-  人喜欢自我吹嘘“礼仪之邦”“五千年文明传承”，但是一落到实际的言行中，实在很难找出哪怕一丁点对应的表现。华夏文明的核心典籍《礼记．曲礼上》有这样一句话：“邻有丧，舂不相；里有殡，不巷歌。”意思是邻居有丧，舂米时不要哼拍子；乡人出殡，不要在街巷中歌唱。
+  海有争议水域建造军事化人工岛礁，在新疆对穆斯林实施大规模监禁，在香港实施国安法破坏“一国两制”，这些都已经对中共政权产生诸多不利后果。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -79,7 +115,7 @@
   </div>
  </center>
  <p>
-  于法于规，没有人强制你不能歌唱，但是大家都愿意遵守，因为这样的情况很有可能会落到自己身上。所以它合情合理。
+  第二是带来的高层权斗不可避免。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -94,7 +130,11 @@
   </div>
  </center>
  <p>
-  用今天我们熟悉的话说，这叫做“同理心”，或者叫“共情”。这是人贵为万物灵长，和其他动物最为本质的区别。目前的科学研究表明，世界上仅仅有两种动物针对同类的境遇有“同情”的表达，一种是人，一种是人在动物界的近亲，倭黑猩猩。
+  裴敏欣说：“继2018年初取消国家主席任期限制后，一场接班权斗已经浮现。习近平现在设置了不可预见的结局，对潜在强大竞争对手的担心促使他只会安排弱小忠实拥护者为接班人。斯大林和
+  <span href="https://www.secretchina.com/news/gb/tag/毛泽东" target="_blank">
+   毛泽东
+  </span>
+  去世后的历史经验表明，继任者很可能爆发权斗。如果习近平的继任者输掉权斗，他的遗产可能像赫鲁晓夫和邓小平那样面临风险。后习近平时期的权斗胜利者将被激励去开辟新的道路，并会毫不犹豫地放弃他的遗产。”
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -109,7 +149,7 @@
   </div>
  </center>
  <p>
-  一个人如果丧失了最基本的为人的标志，那从本质上说，不过就是衣冠禽兽，说得再难听一点，叫做沐猴而冠。
+  裴敏欣认为，习近平通过灌输意识形态来加强党的努力，在实践中，“不可避免的沦为党员为了假装忠诚和遵纪守法而执行的毫无意义的政治形式。”
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -124,7 +164,7 @@
   </div>
  </center>
  <p>
-  很可能有人会说，川普和美国这几年针对中国出台了那么多的制裁措施，可谓中国的敌人，敌人遭殃，我们高兴不是正常的吗？
+  第三是经济发展遭遇内外阻力。裴敏欣指出，中共最新经济蓝图没有包含任何能提高效率的根本性改革。“如果没有真正的改革，中国在未来十年中要维持增长将面临巨大困难。”
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -139,7 +179,7 @@
   </div>
  </center>
  <p>
-  川普作为美国人民选出来的总统，做人做事的出发点，理所当然是根据美国的利益，这其中有和他国利益相冲突的地方是很正常的。不仅仅是和中国，和欧盟、和加拿大、墨西哥甚至自己的盟友日本韩国都有过龃龉。如果因为他履行自己的职责就成了敌人，那可以说全世界都是敌人。
+  裴敏欣还表示，中国在国内的倒退和外交政策的激进，使之处于跟美国及其民主盟友的碰撞过程中。与美国的战略竞争加剧将给中国造成巨大损失。“中美间全面经济脱钩不可避免。如果美国成功地与其盟国团结起来，对中国的影响将是毁灭性的。”
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -154,7 +194,7 @@
   </div>
  </center>
  <p>
-  很多人受限于信息来源，很多认知是错位的。就在一天前，被骂得很惨的蓬佩奥还在推特上发文祝中国人民节日快乐。其实不管是川普还是蓬佩奥，从上台伊始，就始终没有对“中国人民”这个概念有过任何的恶语相向。国家之间的矛盾不一定等于人民之间的矛盾。
+  裴敏欣预测，在习近平时期结束前，中国的社会经济状况几乎肯定会比今天更加有利于民主化。中国最终可能告别极权主义漫长黑影笼罩的过去。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -169,52 +209,9 @@
   </div>
  </center>
  <p>
-  更何况，如果因为自家失火，导致整条街的街坊都遭了殃，哪怕是无心之失，一个正常人的反应也应该是愧疚、道歉。而不是看着因为自己的原因而导致的大火，嘲笑邻居防范不力，罪有应得。这是何等卑劣的小人之心。
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p>
-  很多国人可能以为，躲在国情的小圈子里面，随便骂谁都无所谓，反正自己高兴就好。其实在如今的网络世界，你关注别人，别人一样关注着你。胡主编“造一千枚核弹”的理论一出，美国主流媒体立马就见报；金灿荣“中国赢两次”的高论刚出来，也很快就上了美国国会议员的演讲稿……
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p>
-  好事不出门，坏事传千里。
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p>
-  美国最权威的民调公司皮尤（Pew Research Center）跟踪了从2005年以来的美国普通民众对华好感度。结果显示，2005年高达65%的美国民众对华抱有好感，而从2012年开始，好感度逐年下降，2020年新冠疫情爆发后达到目前的峰值，73%美国人对中国有厌恶感，只有22%的人表示对华有好感。其中甚至有高达90%的人将中国视为威胁。
+  <strong>
+   中共大限将至 习近平被称“总加速师”
+  </strong>
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -233,7 +230,7 @@
   </ins>
  </center>
  <p>
-  这个结果，很难说没有胡主编、金政委们的功劳。试想一下，如果你是一个美国人，天天听到这种荒诞的论调，怎么可能还会抱有好感？政客之间的厌恶可以说是个人倾向，人民之间相互厌恶，就绝非一朝一夕。中美建交40年垒起来的民意基础，要毁掉是非常容易的事情。
+  去年9月，裴敏欣也曾在“评论汇编”（Project Syndicate）网站撰文说，中共政权面临一连串内忧外患，要维持一党专政恐怕危机重重，如今中国共产党大限将至。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -248,11 +245,11 @@
   </div>
  </center>
  <p>
-  回头说说川普。不知道这个74岁的老头如果知道中国人的反应他会怎么想。其实今年以来川普对华的态度变化已经非常大。在
-  <span href="https://www.secretchina.com/news/gb/tag/贸易战" target="_blank">
-   贸易战
+  裴敏欣今年4月底也在一场网络研讨会上说，
+  <span href="https://www.secretchina.com/news/gb/tag/中共病毒" target="_blank">
+   中共病毒
   </span>
-  初期，川普着眼于外贸利益，虽然大棒频挥，但对华的腔调并不高，也不尖锐。但今年的疫情，不仅让他前三年的努力因为经济的衰退而功亏一篑，导致连任受到致命的影响。更重要的是，个人方面，他最亲近的弟弟罗伯特8月份已经先走一步，年仅71岁。虽然没有公布死因，但是极有可能和疫情有关。
+  (又称新冠状病毒，COVID-19)疫情对中共政权构成了几十年一遇的重大挑战。过去40几年来，中共的好运得益于一个极为有利的国际环境，尤其是美中关系，如今这种运气已经走到尽头了。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -267,7 +264,7 @@
   </div>
  </center>
  <p>
-  现在川普本人及夫人也确诊。如果站在一个普通人的爱恨情仇的角度，这场疫情对于川普，于公于私，都可算得上国仇家恨。此前川普就一直不间断的要求疫情追责，试想一下，如果他康复了，很有可能获得连任，那个时候这口恶气他会怎么出？
+  事实上，习近平近年铁心保党，全面左转之下，已将中共带入死胡同，网民给其封号为“总加速师”，意谓加速中共灭亡者，也即中共末代党魁。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -282,7 +279,7 @@
   </div>
  </center>
  <p>
-  即使，退一万步说，出现了某些意外，川普有不测失去连任的机会，美帝的体制也照样会运转如故。而总统亡故这个事情本身，对于美国来说会变成一个迟早要拿出来说的大梁子。不管是谁继任，这事也轻易不会了结。对于本来就呼声很高的疫情追责，恐怕就不仅仅是动动嘴皮子的事情了。
+  今年8月22日，长期研究美中台局势的总体经济学者吴嘉隆在脸书发文表示，“习近平的绰号，总加速师，绝非浪得虚名，他确实会加速中共的崩溃。”
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -297,7 +294,7 @@
   </div>
  </center>
  <p>
-  所以无论哪一种情况，对于我们来说都是极其糟糕的。这个时候不放低身段，拿出一点基本的人样，反而为口出恶言、幸灾乐祸，这不仅仅是智商的残缺、道德的低下，更是人性的顽劣。多重的不可原谅。歌德曾经有一句名言：“人变得真正低劣时，除了高兴别人的不幸外，已无其他乐趣可言”。
+  9月22日，红二代、地产大享任志强被判18年徒刑。而任志强被重判，据信与此前他写文章批习是“剥光了衣服也要坚持当皇帝的小丑”有关。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -312,7 +309,7 @@
   </div>
  </center>
  <p>
-  10月4日，蓬佩奥即将出访亚洲，目的在于组建美、日、澳、印为核心的“亚洲小北约”。针对的目标非常明确。
+  资深评论人颜纯钩撰文指出，习近平初上台时曾拍胸脯保证红二代们的利益， 如今动了红二代，而且是有代表性的红二代，这件事非同小可，绝对会产生深远影响。习近平坑越挖越多，一个比一个大，侥幸跳过一两个坑，难保跳过所有的坑，所以他的“总加速师”雅号，绝非浪得虚名。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -326,22 +323,6 @@
    </center>
   </div>
  </center>
- <p>
-  今天为川普染病而欢呼雀跃的人，也许很快就笑不出来了。
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- (文章仅代表作者个人立场和观点)
  <p style="margin-bottom:12px;">
   <hr style="border-top: 1px dashed  ;" width="100%"/>
   <br/>
@@ -360,7 +341,7 @@
   ，就可以助力我们突破审查与封锁，向至少10000位中国大陆同胞奉上独立真实的关键资讯，在危难时刻向他们发出预警，救他们于大瘟疫与其它社会危难之中。
   <center>
    <span href="https://account.secretchina.com/planshopcart.php?pid=2020plana&amp;carf=add&amp;code=b5">
-    <img src="/kzgd/ad/join_membership_728x90.jpg" width="100%"/>
+    <img src="/kzgd/ad/kzgad202010728.gif" width="100%"/>
    </span>
   </center>
   <center>
@@ -392,13 +373,13 @@
 
 <hr/>
 手机上长按并复制下列链接或二维码分享本文章：<br/>
-https://github.com/gfw-breaker/banned-news3/blob/master/pages/p4/948132.md <br/>
-<a href='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p4/948132.md'><img src='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p4/948132.md.png'/></a> <br/>
-原文地址（需翻墙访问）：https://www.secretchina.com/news/gb/2020/10/04/948132.html
+https://github.com/gfw-breaker/banned-news3/blob/master/pages/p2/954812.md <br/>
+<a href='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p2/954812.md'><img src='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p2/954812.md.png'/></a> <br/>
+原文地址（需翻墙访问）：https://www.secretchina.com/news/gb/2020/12/06/954812.html
 
 
 ------------------------
 #### [首页](https://github.com/gfw-breaker/banned-news3/blob/master/README.md) &nbsp;|&nbsp; [一键翻墙软件](https://github.com/gfw-breaker/nogfw/blob/master/README.md) &nbsp;| [《九评共产党》](https://github.com/gfw-breaker/9ping.md/blob/master/README.md#九评之一评共产党是什么) | [《解体党文化》](https://github.com/gfw-breaker/jtdwh.md/blob/master/README.md) | [《共产主义的终极目的》](https://github.com/gfw-breaker/gczydzjmd.md/blob/master/README.md)
 
 
-<img src='http://gfw-breaker.win/banned-news3/pages/p4/948132.md' width='0px' height='0px'/>
+<img src='http://gfw-breaker.win/banned-news3/pages/p2/954812.md' width='0px' height='0px'/>
