同步于: 12月6日5时52分

--- a/pages/nf4514/n12597952.md
+++ b/pages/nf4514/n12597952.md
@@ -5,7 +5,7 @@
 
 
 
-<div><img alt="【大选更新12.5】鲍威尔：川普有充足时间翻盘" class="attachment-djy_600_400 size-djy_600_400 wp-post-image" src="https://i.epochtimes.com/assets/uploads/2020/11/Epoch_Times-Giuliani-Powell-510A2823-1200x800-600x400.jpg"/>
+<div><img alt="【大选更新12.5】鲍威尔：川普有充足时间翻盘" class="attachment-djy_600_400 size-djy_600_400 wp-post-image" src="https://i.epochtimes.com/assets/uploads/2020/12/bao-600x400.jpg"/>
 <div class="caption">
  图为2020年11月19日，在华盛顿共和党全国委员会总部举行的新闻发布会上，西德尼·鲍威尔（Sidney Powell）律师在川普律师、前纽约市市长鲁迪·朱利安尼（L）的陪同下对媒体讲话。(Charlotte Cuthbertson/The Epoch Times)
 </div></div><hr/>
@@ -50,6 +50,21 @@
 <h4>
  以下是美国大选情况的实时更新：
 </h4>
+<h3>
+ 公民网站呼吁进行公平选举
+</h3>
+<p>
+ 选举日后不久，一个公民联盟推出了一个名为“每一张合法选票”（Every Legal Vote）的网站。
+</p>
+<p>
+ 该网站正在揭露舞弊事件及其对2020年选举的影响。
+</p>
+<p>
+ 经济战室（Economic War Room）的主持人和“每一张合法选票”的共同创始人凯文·弗里曼（Kevin Freeman）说，他们不要求捐款。
+</p>
+<p>
+ 据弗里曼说，“每一张合法选票”已经从看到选举诚信受损的人们那里获得了数千份报告。
+</p>
 <h3>
  川普：尽可能少看假新闻《华盛顿邮报》！
 </h3>
