--- a/pages/p7/938210.md
+++ b/pages/p7/938210.md
@@ -1,4 +1,4 @@
-### 加拿大十万人为自由游行 为美国高呼(图)
+### 17则古训赠当今(图)
 ------------------------
 
 #### [首页](https://github.com/gfw-breaker/banned-news3/blob/master/README.md) &nbsp;&nbsp;|&nbsp;&nbsp; [法轮功真相](https://github.com/begood0513/basic/blob/master/README.md)  &nbsp;&nbsp;|&nbsp;&nbsp; [手把手翻墙教程](https://github.com/gfw-breaker/guides/wiki)  &nbsp;&nbsp;|&nbsp;&nbsp; [一键翻墙软件](https://github.com/gfw-breaker/nogfw/blob/master/README.md)  
@@ -7,9 +7,9 @@
 
 <div class="article_right" style="fone-color:#000">
  <p style="text-align:center">
-  <img alt="加拿大 集会 武汉肺炎 病毒" src="https://img3.secretchina.com/pic/2019/12-30/p2592931a793942897-ss.jpg" style="height:337px; width:600px"/>
+  <img alt="行舍其华，言去其辩。（看中国：手绘插画 志清）" src="https://img2.secretchina.com/pic/2019/4-8/p2398774a771091283-ss.jpg" style="height:337px; width:600px"/>
   <br>
-   加拿大国旗（图片来源:MARVIN RECINOS/AFP via Getty Images）
+   行舍其华，言去其辩。（看中国：手绘插画 志清）
    <span id="hideid" name="hideid" style="color:red;display:none;">
     <span href="https://www.secretchina.com">
     </span>
@@ -21,136 +21,66 @@
 
 ---
 
-#### 💥 [《伪火》 - 天安门自焚真相 ](http://158.247.195.190:10000/videos/blog/weihuo.html)&nbsp; |&nbsp; [“1400例”谎言揭秘  ](http://158.247.195.190:10000/videos/blog/jiexi1400.html)
-
 #### [ 🎬  翻墙必看视频（YouTube热门频道、网站代理、时事热点、历史事件 ...）](https://github.com/gfw-breaker/links/blob/master/banned.md)
+
+#### [ 💥  禁书下载（政治、经济、人权、民主自由、文革、六四 ...）](https://github.com/gfw-breaker/books/blob/master/README.md)
 
 
   </div>
  </div>
  <p>
-  【看中国2020年9月22日讯】（看中国记者郑清编译报导）9月12日星期六，近10万人在
   <strong>
-   加拿大
-  </strong>
-  蒙特利尔参加了“为自由而战”的
-  <strong>
-   集会
-  </strong>
-  ，并抗议霸道的
-  <strong>
-   <span href="https://www.secretchina.com/news/gb/tag/武汉肺炎" target="_blank">
-    武汉肺炎
+   <span href="https://www.secretchina.com/news/gb/tag/古训" target="_blank">
+    古训
    </span>
   </strong>
-  疫情的限制条件。几位发言人抨击虚假信息，并指责对疫情严重性的“轻描淡写”。一些发言者说，这种
+  是先人
   <strong>
-   病毒
+   智慧
   </strong>
-  类似于一种严重的流感。
+  的
+  <strong>
+   结晶
+  </strong>
+  ，已在国人心中流淌千百年，其中蕴藏的智慧，应用在待人处世上，常有意想不到的效果，足以让人受用一生。
   <span id="hideid" name="hideid" style="color:red;display:none;">
    <span href="https://www.secretchina.com">
    </span>
   </span>
  </p>
- <p style="text-align:center">
- </p>
- <blockquote class="twitter-tweet">
-  <p dir="ltr" lang="en">
-   Anti-mask protesters in Montreal are carrying American flags &amp; chanting "USA" right now
-   <span href="https://t.co/kVorP3gAAY">
-    pic.twitter.com/kVorP3gAAY
-   </span>
-  </p>
-  — Fifty Shades of Whey (@davenewworld_2)
-  <span href="https://twitter.com/davenewworld_2/status/1304888589373902848?ref_src=twsrc%5Etfw">
-   September 12, 2020
-  </span>
- </blockquote>
  <p>
+  古训今译，古训今鉴，读而思，思而行，行而达。下面收集了17句古训金言，望尔获益。
  </p>
  <p>
-  在游行期间，许多游行者高呼“USA-USA-USA”。其中有大量
-  <span href="https://www.secretchina.com/news/gb/tag/川普" target="_blank">
-   川普
-  </span>
-  (特朗普)2020的旗子，口号是“不要废话”，还有这样的标语：“宁可自由地死去，也不要没有自由地活着”
- </p>
- <p>
-  一位照片记者评论说：“为
-  <span href="https://zh.wikipedia.org/wiki/%E5%8A%A0%E6%8B%BF%E5%A4%A7" target="_blank">
-   加拿大
-  </span>
-  抗议活动而举起这么多的美国国旗和川普2020真是太疯狂了。”
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p>
-  “
-  <span href="https://www.secretchina.com/news/gb/tag/加拿大" target="_blank">
-   加拿大
-  </span>
-  人爱川普”
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p>
-  加拿大
-  <span href="https://www.secretchina.com/news/gb/tag/集会" target="_blank">
-   集会
-  </span>
-  上最受欢迎的口号之一是“NO MORE BULLSHIT”，这包括政治正确性废话；宣传性废话；腐败政客的废话等等。
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p>
-  一位参加集会的人说，“我们不想要废话。我们已成长为UPS。我们可以面对真相。如果我是一个美国人，我愿意爬行几千英里来帮助川普。他实现了自由，也想为人民争取自由。即便满目疮痍，我也要爬几千英里。”
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p>
-  一位集会人士表示，她认为川普如果在加拿大竞选，将会当选。川普表彰了反对全球化的革命。人们必须管理自己的事务，而不是政客。如果美国对全球主义者感到失望，那么跟随世界的步伐将变得更加容易。
+  【古训1】刚直，则当忘身以为国，履正以无偏。（ 据《金史•王修传》）
   <br>
+   【今译】刚直之人，就应当为国家舍死忘生，做事正直。而不偏听偏信。
+  </br>
+ </p>
+ <p>
+  【古训2】岂有为人，知过而不能改者乎!（据《元史•木华黎传》）
+  <br>
+   【今译】 难道有人知道做错了，还不能改正的吗?（知错而不改，能叫人吗？）
+  </br>
+ </p>
+ <p>
+  【古训3】伎巧为丧国斧斤，珠玉为荡心醯毒。侈丽纤美，不可以不遏。志骄于业泰，体逸于时安。（据《新唐书•后妃传》(上)）
+  <br>
+   【今译】奸诈诡谲是丧亡国家的斧头，珍珠美玉是心志摇荡的毒酒。奢华纤巧之美，不可以不加阻止。志气骄惰，是由于事业的安泰；身体淫乐，是由于处境的安闲。
+  </br>
+ </p>
+ <p>
+  【古训4】任重道悠，利深祸速。（据《后汉书•皇后纪》上)
+  <br>
+   【今译】官职重大的人，任职的时间越长，求利越多，招祸越快。
+   <br>
+    <br>
+     【古训5】自古圣帝必以俭约为美，乱主必以奢侈贻患。（据《魏书•韩麒麟传》）
+     <br>
+      【今译】自古以来，圣明的帝王一定把俭朴当作好事；而昏庸的君主则一定因为奢侈，而种下祸患。
+     </br>
+    </br>
+   </br>
   </br>
  </p>
  <center>
@@ -166,7 +96,9 @@
   </div>
  </center>
  <p>
-  法西斯黎明，还是解放之路？
+  【古训6】自古以来，身居富贵，能知止足者，甚少。（据《旧唐书•李靖传》）
+  <br/>
+  【今译】自古以来，身居富贵而能知道适可而止的人，很少。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -181,7 +113,9 @@
   </div>
  </center>
  <p>
-  尽管加拿大媒体对川普旗的数量感到惊讶，但并不令任何示威者感到惊讶。媒体将这次集会定性为抗议戴口罩。但是，如果您与任何示威者交谈，他们的推理将远远超出简单的面罩原则。对他们来说，这是一场自由运动。
+  【古训7】行舍其华，言去其辩。（据《晋书•应贞传》）
+  <br/>
+  【今译】 行动应舍弃浮华（做事要诚实），言论要舍弃诡辩（说话要正直）。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -196,7 +130,9 @@
   </div>
  </center>
  <p>
-  他们将川普视为代表人民自由和国家主权的人。示威者热爱加拿大。在他们看来，川普代表了加拿大人应该自己决定自己命运的想法。这些示威者想要加拿大人有意义的政治政策。
+  【古训8】行道之人，德行文学为根株，正直刚毅为柯叶。有根无叶，或可俟时；有叶无根，膏雨所不能活也。至于孝慈、友悌、忠信、笃行，乃食之醯酱，可一日无哉?   （据《新唐书•柳公绰传》）
+  <br/>
+  【今译】遵行大道的人，以德行和文学为根株，以正直刚毅为枝叶。有根没有叶，尚且可以等待时日；有叶没有根，则肥沃的雨水也不能救活它。至于孝慈、友悌、忠信、诚实，犹如吃的酱醋，能够一天没有吗?
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -211,7 +147,48 @@
   </div>
  </center>
  <p>
-  一位集会人士解释说，她对川普的支持，“川普象征着全球主义的崛起。人们必须管理自己的事务，而不是政治家。如果美国落入全球化主义者的行列，世界其它地区将更容易跟随。”
+  【古训9】行正道，循礼义，敦友爱，尽公忠。（据《清史稿•太宗本纪》)
+  <br/>
+  【今译】按正确的道理、准则做事，遵循礼法、道义，忠诚地促成友爱，竭力为公事效忠。
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p>
+  【古训10】杀身成仁，虽死犹生。（据《明史•晋恭王朱桐传》）
+  <br/>
+  【今译】杀身成仁，即使是死了，也像活着一样受人尊敬。
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p>
+  【古训11】名者，公器也。不可多取。（据《三国志•张温传》）
+  <br/>
+  【今译】名位，是天下人所共有的。不可以一个人贪心多取。
+  <br/>
+  <br/>
+  【古训12】危邦不入，乱邦不居。（据《晋书•张方传》）
+  <br/>
+  【今译】处于危险之中的国家，不要进入；处于动乱的国家，不要停留。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -229,80 +206,10 @@
   <ins class="adsbygoogle" data-ad-client="ca-pub-1276641434651360" data-ad-format="fluid" data-ad-layout="in-article" data-ad-slot="3646767294" style="display:block; text-align:center;">
   </ins>
  </center>
- <p style="text-align:center">
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <blockquote class="twitter-tweet">
-  <p dir="ltr" lang="en">
-   Amazing to see at a
-   <span href="https://twitter.com/hashtag/QC?src=hash&amp;ref_src=twsrc%5Etfw">
-    #QC
-   </span>
-   <span href="https://twitter.com/hashtag/march?src=hash&amp;ref_src=twsrc%5Etfw">
-    #march
-   </span>
-   in
-   <span href="https://twitter.com/hashtag/Montreal?src=hash&amp;ref_src=twsrc%5Etfw">
-    #Montreal
-   </span>
-   <span href="https://twitter.com/hashtag/Canada?src=hash&amp;ref_src=twsrc%5Etfw">
-    #Canada
-   </span>
-   today! ❤️
-   <span href="https://twitter.com/hashtag/Trump?src=hash&amp;ref_src=twsrc%5Etfw">
-    #Trump
-   </span>
-   <span href="https://twitter.com/hashtag/Trump2020?src=hash&amp;ref_src=twsrc%5Etfw">
-    #Trump2020
-   </span>
-   <span href="https://twitter.com/hashtag/GoUSA?src=hash&amp;ref_src=twsrc%5Etfw">
-    #GoUSA
-   </span>
-   <span href="https://twitter.com/hashtag/MAGA?src=hash&amp;ref_src=twsrc%5Etfw">
-    #MAGA
-   </span>
-   <span href="https://twitter.com/hashtag/4MoreYears?src=hash&amp;ref_src=twsrc%5Etfw">
-    #4MoreYears
-   </span>
-   <span href="https://twitter.com/hashtag/VoteTrump2020?src=hash&amp;ref_src=twsrc%5Etfw">
-    #VoteTrump2020
-   </span>
-   <span href="https://twitter.com/hashtag/VoteRed2020?src=hash&amp;ref_src=twsrc%5Etfw">
-    #VoteRed2020
-   </span>
-   <span href="https://t.co/zno3lUwRrA">
-    pic.twitter.com/zno3lUwRrA
-   </span>
-  </p>
-  <center>
-   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-    <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-    </div>
-   </div>
-   <div>
-    <center>
-     <div id="div-gpt-ad-1589559869784-0">
-     </div>
-    </center>
-   </div>
-  </center>
-  — Stephanie Quanel (@StephanieQuanel)
-  <span href="https://twitter.com/StephanieQuanel/status/1304907236687388672?ref_src=twsrc%5Etfw">
-   September 12, 2020
-  </span>
- </blockquote>
  <p>
+  【古训13】兆始恶者有终殃，积不善者无余庆。（据《北史•崔宏传》）
+  <br/>
+  【今译】出现坏的征兆，最终必有灾祸；长期做坏事的人，不会有好的结局。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -317,7 +224,9 @@
   </div>
  </center>
  <p>
-  和平抗议：一位观察家评论说：“今天在蒙特利尔举行了美丽的集会，和平漫步充满欢乐的能量。组织者和步行者做得很好。”
+  【古训14】汝惟不矜，天下莫与汝争能；汝惟不伐，天下莫与汝争功。（据《隋书•李谔传》）
+  <br/>
+  【今译】只要你不自以为贤能，天下就没有与你竞争才能的人；只要你不自我夸耀，天下就没有与你争夺功劳的人。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -332,7 +241,43 @@
   </div>
  </center>
  <p>
-  一名抗议者说：“在我们视线范围来看，有大量的人为我们的自由而战。”早期估计表明，今天有成千上万的加拿大人游行。但是随着一天的进展，围观者的加入使人数激增。
+  【古训15】进不知退，取祸之道也！（据《新唐书•高智周传》）
+  <br/>
+  【今译】只知前进不知后退，是招取祸败的道途。
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p>
+  【古训16】志骄则好生事，器小则无远图。（据《明史•太祖本纪》(三)）
+  <br/>
+  【今译】志气高傲，容易惹是生非；器量狭小，就不会有长远打算。
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p>
+  【古训17】声过其实，古人所不取。攻乎异端，为政之甚害。（据《晋书•张闿》）
+  <br/>
+  【今译】声誉超过本人的实际情况，这是古人所不赞成的。攻击不同的观点与学说，对治理国家，是有严重危害的！
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -364,7 +309,7 @@
   ，就可以助力我们突破审查与封锁，向至少10000位中国大陆同胞奉上独立真实的关键资讯，在危难时刻向他们发出预警，救他们于大瘟疫与其它社会危难之中。
   <center>
    <span href="https://account.secretchina.com/planshopcart.php?pid=2020plana&amp;carf=add&amp;code=b5">
-    <img src="/kzgd/ad/join_membership_728x90.jpg" width="100%"/>
+    <img src="/kzgd/ad/kzgad202010728.gif" width="100%"/>
    </span>
   </center>
   <center>
@@ -396,13 +341,13 @@
 
 <hr/>
 手机上长按并复制下列链接或二维码分享本文章：<br/>
-https://github.com/gfw-breaker/banned-news3/blob/master/pages/p9/946840.md <br/>
-<a href='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p9/946840.md'><img src='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p9/946840.md.png'/></a> <br/>
-原文地址（需翻墙访问）：https://www.secretchina.com/news/gb/2020/09/22/946840.html
+https://github.com/gfw-breaker/banned-news3/blob/master/pages/p7/938210.md <br/>
+<a href='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p7/938210.md'><img src='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p7/938210.md.png'/></a> <br/>
+原文地址（需翻墙访问）：https://www.secretchina.com/news/gb/2020/12/02/938210.html
 
 
 ------------------------
 #### [首页](https://github.com/gfw-breaker/banned-news3/blob/master/README.md) &nbsp;|&nbsp; [一键翻墙软件](https://github.com/gfw-breaker/nogfw/blob/master/README.md) &nbsp;| [《九评共产党》](https://github.com/gfw-breaker/9ping.md/blob/master/README.md#九评之一评共产党是什么) | [《解体党文化》](https://github.com/gfw-breaker/jtdwh.md/blob/master/README.md) | [《共产主义的终极目的》](https://github.com/gfw-breaker/gczydzjmd.md/blob/master/README.md)
 
 
-<img src='http://gfw-breaker.win/banned-news3/pages/p9/946840.md' width='0px' height='0px'/>
+<img src='http://gfw-breaker.win/banned-news3/pages/p7/938210.md' width='0px' height='0px'/>
