--- a/pages/nf4514/n12597952.md
+++ b/pages/nf4514/n12597952.md
@@ -54,7 +54,7 @@
  公民网站呼吁进行公平选举
 </h3>
 <p>
- 选举日后不久，一个公民联盟推出了一个名为“每一张合法选票”（Every Legal Vote）的网站。
+ 据英文新唐人报导，选举日后不久，一个公民联盟推出了一个名为“每一张合法选票”（Every Legal Vote）的网站。
 </p>
 <p>
  该网站正在揭露舞弊事件及其对2020年选举的影响。
@@ -64,6 +64,15 @@
 </p>
 <p>
  据弗里曼说，“每一张合法选票”已经从看到选举诚信受损的人们那里获得了数千份报告。
+</p>
+<p>
+ 有些报告尚未在其网站上公布，因为有些人担心会遭到报复。还有一些报告需要由法律团队检视。
+</p>
+<p>
+ 弗里曼说，不久将有一份新报告出炉，其中显示了Dominion投票系统（Dominion Voting Systems）把选票制成表格的可疑方式。
+</p>
+<p>
+ 弗里曼呼吁人们保持耐心并认识到，可能有邪恶的团体试图操纵美国的选举制度。
 </p>
 <h3>
  川普：尽可能少看假新闻《华盛顿邮报》！
