同步于: 12月6日8时2分

--- a/pages/p4/954846.md
+++ b/pages/p4/954846.md
@@ -1,4 +1,4 @@
-### 17则古训赠当今(图)
+### 你触手可及的世界 并不是丁真的世界(图)
 ------------------------
 
 #### [首页](https://github.com/gfw-breaker/banned-news3/blob/master/README.md) &nbsp;&nbsp;|&nbsp;&nbsp; [法轮功真相](https://github.com/begood0513/basic/blob/master/README.md)  &nbsp;&nbsp;|&nbsp;&nbsp; [手把手翻墙教程](https://github.com/gfw-breaker/guides/wiki)  &nbsp;&nbsp;|&nbsp;&nbsp; [一键翻墙软件](https://github.com/gfw-breaker/nogfw/blob/master/README.md)  
@@ -7,9 +7,9 @@
 
 <div class="article_right" style="fone-color:#000">
  <p style="text-align:center">
-  <img alt="行舍其华，言去其辩。（看中国：手绘插画 志清）" src="https://img2.secretchina.com/pic/2019/4-8/p2398774a771091283-ss.jpg" style="height:337px; width:600px"/>
+  <img alt="藏族" src="https://img3.secretchina.com/pic/2020/12-6/p2832401a700674095-ss.jpg" style="height:400px; width:600px"/>
   <br>
-   行舍其华，言去其辩。（看中国：手绘插画 志清）
+   四川风光（图片来源：Pixabay）
    <span id="hideid" name="hideid" style="color:red;display:none;">
     <span href="https://www.secretchina.com">
     </span>
@@ -29,59 +29,60 @@
   </div>
  </div>
  <p>
+  【看中国2020年12月6日讯】诗和远方在一个苦闷的世界中，有着恒久的迷幻魅力。虽然大部分中国人不读诗，也不太关心远方的定义。最近大火的甘孜理塘的旅游宣传片《
   <strong>
-   <span href="https://www.secretchina.com/news/gb/tag/古训" target="_blank">
-    古训
+   <span href="https://www.secretchina.com/news/gb/tag/丁真" target="_blank">
+    丁真
    </span>
-  </strong>
-  是先人
-  <strong>
-   智慧
   </strong>
   的
   <strong>
-   结晶
+   世界
   </strong>
-  ，已在国人心中流淌千百年，其中蕴藏的智慧，应用在待人处世上，常有意想不到的效果，足以让人受用一生。
+  》全网的播放量高达42亿次，平均每个中国人看了3遍。
   <span id="hideid" name="hideid" style="color:red;display:none;">
    <span href="https://www.secretchina.com">
    </span>
   </span>
  </p>
  <p>
-  古训今译，古训今鉴，读而思，思而行，行而达。下面收集了17句古训金言，望尔获益。
+  那个骑着白马的
+  <strong>
+   <span href="https://www.secretchina.com/news/gb/tag/藏族" target="_blank">
+    藏族
+   </span>
+  </strong>
+  美少年，在雪山草地间自由驰骋，引爆了多少说走就走的口水。
  </p>
  <p>
-  【古训1】刚直，则当忘身以为国，履正以无偏。（ 据《金史•王修传》）
+  但是骨感的现实，对于大部分囊中羞涩的青年甚至中年而言，除了舔屏，恐怕也只剩下“总有一天我要去”的干瘪豪言。那个远方的
+  <span href="https://www.secretchina.com/news/gb/tag/世界" target="_blank">
+   世界
+  </span>
+  ，对丁真是生于兹长于兹的真世界，对你是可望不可及的假世界。
+ </p>
+ <p>
+  大多数二十出头的年轻人，在毕业即失业的现实中，即将迎来的是“上山下乡”的窘迫，而不是“喂马劈柴”的惬意。即便如愿步入职场，遇见的可能也不是丁真这般的美少年，而是朱军那样的咸猪手，或者胡编那猥琐的眼神。
+ </p>
+ <p style="text-align:center">
   <br>
-   【今译】刚直之人，就应当为国家舍死忘生，做事正直。而不偏听偏信。
+   甘孜理塘旅游宣传片《
+   <strong>
+    丁真
+   </strong>
+   的
+   <strong>
+    世界
+   </strong>
+   》
   </br>
  </p>
  <p>
-  【古训2】岂有为人，知过而不能改者乎!（据《元史•木华黎传》）
-  <br>
-   【今译】 难道有人知道做错了，还不能改正的吗?（知错而不改，能叫人吗？）
-  </br>
- </p>
- <p>
-  【古训3】伎巧为丧国斧斤，珠玉为荡心醯毒。侈丽纤美，不可以不遏。志骄于业泰，体逸于时安。（据《新唐书•后妃传》(上)）
-  <br>
-   【今译】奸诈诡谲是丧亡国家的斧头，珍珠美玉是心志摇荡的毒酒。奢华纤巧之美，不可以不加阻止。志气骄惰，是由于事业的安泰；身体淫乐，是由于处境的安闲。
-  </br>
- </p>
- <p>
-  【古训4】任重道悠，利深祸速。（据《后汉书•皇后纪》上)
-  <br>
-   【今译】官职重大的人，任职的时间越长，求利越多，招祸越快。
-   <br>
-    <br>
-     【古训5】自古圣帝必以俭约为美，乱主必以奢侈贻患。（据《魏书•韩麒麟传》）
-     <br>
-      【今译】自古以来，圣明的帝王一定把俭朴当作好事；而昏庸的君主则一定因为奢侈，而种下祸患。
-     </br>
-    </br>
-   </br>
-  </br>
+  如果再残忍一点说，当你拖着行李站在寒风中向蛋壳公司讨公道，或者一份会计的工作都不足以养活自己而要兼职卖淫，甚或开个奶茶店还要靠肉体直播来付店租的时候，远方的雪山草甸对你除了更深的刺痛，绝不会有任何的安慰和寄望。就像我们
+  <span href="https://www.secretchina.com" target="_blank">
+   中国
+  </span>
+  人千百年来贴在家门口的那个福字，终究是一种颠倒后才能安慰人的意象。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -96,9 +97,7 @@
   </div>
  </center>
  <p>
-  【古训6】自古以来，身居富贵，能知止足者，甚少。（据《旧唐书•李靖传》）
-  <br/>
-  【今译】自古以来，身居富贵而能知道适可而止的人，很少。
+  再美的大饼在无坚不摧的现实面前，迟早幻化成一地纠结的鸡毛。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -113,9 +112,7 @@
   </div>
  </center>
  <p>
-  【古训7】行舍其华，言去其辩。（据《晋书•应贞传》）
-  <br/>
-  【今译】 行动应舍弃浮华（做事要诚实），言论要舍弃诡辩（说话要正直）。
+  我十几年前看过一副印象极深的漫画：一个胡子拉碴的青年，在出租屋的电脑前苦苦思索：美帝的阴谋怎么破？日本的大仇何时报？台海的统一分几步？而此时屋外响起敲门声：办暂住证了喂……
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -130,9 +127,7 @@
   </div>
  </center>
  <p>
-  【古训8】行道之人，德行文学为根株，正直刚毅为柯叶。有根无叶，或可俟时；有叶无根，膏雨所不能活也。至于孝慈、友悌、忠信、笃行，乃食之醯酱，可一日无哉?   （据《新唐书•柳公绰传》）
-  <br/>
-  【今译】遵行大道的人，以德行和文学为根株，以正直刚毅为枝叶。有根没有叶，尚且可以等待时日；有叶没有根，则肥沃的雨水也不能救活它。至于孝慈、友悌、忠信、诚实，犹如吃的酱醋，能够一天没有吗?
+  这不是丁真的世界，但却是真的世界。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -147,9 +142,7 @@
   </div>
  </center>
  <p>
-  【古训9】行正道，循礼义，敦友爱，尽公忠。（据《清史稿•太宗本纪》)
-  <br/>
-  【今译】按正确的道理、准则做事，遵循礼法、道义，忠诚地促成友爱，竭力为公事效忠。
+  我去过藏区4次，第一次走滇藏线的时候也还年轻，工作了5年才第一次获准休长假旅游。和我一起搭车的有一个法国人“阿诺”。这家伙三十好几，有钱就看世界。我们几个中国青年在一起总是谈论生活压力的问题，这让阿诺很不解。他问我，你们中国人为什么总是考虑一些遥远的事情？我跟他开玩笑说，如果有一天你没有法兰西的福利保障，跟我们是一样的。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -164,31 +157,7 @@
   </div>
  </center>
  <p>
-  【古训10】杀身成仁，虽死犹生。（据《明史•晋恭王朱桐传》）
-  <br/>
-  【今译】杀身成仁，即使是死了，也像活着一样受人尊敬。
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p>
-  【古训11】名者，公器也。不可多取。（据《三国志•张温传》）
-  <br/>
-  【今译】名位，是天下人所共有的。不可以一个人贪心多取。
-  <br/>
-  <br/>
-  【古训12】危邦不入，乱邦不居。（据《晋书•张方传》）
-  <br/>
-  【今译】处于危险之中的国家，不要进入；处于动乱的国家，不要停留。
+  那趟旅行给我留下终生印象的还有一个只有一面之缘的搭车的农民工。他在路边拦了好久也没有车愿意搭他，最后是搭上了我们的车。坐车的时候情不自禁的说了一句：我在这里修路3年了，今天还是第一次坐车走自己修的路……
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -207,9 +176,7 @@
   </ins>
  </center>
  <p>
-  【古训13】兆始恶者有终殃，积不善者无余庆。（据《北史•崔宏传》）
-  <br/>
-  【今译】出现坏的征兆，最终必有灾祸；长期做坏事的人，不会有好的结局。
+  看着他欣喜的模样，我差点掉下泪来。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -224,9 +191,7 @@
   </div>
  </center>
  <p>
-  【古训14】汝惟不矜，天下莫与汝争能；汝惟不伐，天下莫与汝争功。（据《隋书•李谔传》）
-  <br/>
-  【今译】只要你不自以为贤能，天下就没有与你竞争才能的人；只要你不自我夸耀，天下就没有与你争夺功劳的人。
+  我知道阿诺一辈子都想不通。他站在地表之上，困惑于地底十八层的生存策略，就像我今天仰望胡编的私生子到底有几个的样子。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -241,9 +206,7 @@
   </div>
  </center>
  <p>
-  【古训15】进不知退，取祸之道也！（据《新唐书•高智周传》）
-  <br/>
-  【今译】只知前进不知后退，是招取祸败的道途。
+  但我始终知道，触手可及的世界，并不是丁真的世界。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -258,9 +221,11 @@
   </div>
  </center>
  <p>
-  【古训16】志骄则好生事，器小则无远图。（据《明史•太祖本纪》(三)）
-  <br/>
-  【今译】志气高傲，容易惹是生非；器量狭小，就不会有长远打算。
+  （
+  <span href="https://www.facebook.com/man.tank.1804" target="_blank">
+   原文链接
+  </span>
+  ）
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -274,23 +239,7 @@
    </center>
   </div>
  </center>
- <p>
-  【古训17】声过其实，古人所不取。攻乎异端，为政之甚害。（据《晋书•张闿》）
-  <br/>
-  【今译】声誉超过本人的实际情况，这是古人所不赞成的。攻击不同的观点与学说，对治理国家，是有严重危害的！
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
+ (文章仅代表作者个人立场和观点)
  <p style="margin-bottom:12px;">
   <hr style="border-top: 1px dashed  ;" width="100%"/>
   <br/>
@@ -341,13 +290,13 @@
 
 <hr/>
 手机上长按并复制下列链接或二维码分享本文章：<br/>
-https://github.com/gfw-breaker/banned-news3/blob/master/pages/p7/938210.md <br/>
-<a href='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p7/938210.md'><img src='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p7/938210.md.png'/></a> <br/>
-原文地址（需翻墙访问）：https://www.secretchina.com/news/gb/2020/12/02/938210.html
+https://github.com/gfw-breaker/banned-news3/blob/master/pages/p4/954846.md <br/>
+<a href='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p4/954846.md'><img src='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p4/954846.md.png'/></a> <br/>
+原文地址（需翻墙访问）：https://www.secretchina.com/news/gb/2020/12/06/954846.html
 
 
 ------------------------
 #### [首页](https://github.com/gfw-breaker/banned-news3/blob/master/README.md) &nbsp;|&nbsp; [一键翻墙软件](https://github.com/gfw-breaker/nogfw/blob/master/README.md) &nbsp;| [《九评共产党》](https://github.com/gfw-breaker/9ping.md/blob/master/README.md#九评之一评共产党是什么) | [《解体党文化》](https://github.com/gfw-breaker/jtdwh.md/blob/master/README.md) | [《共产主义的终极目的》](https://github.com/gfw-breaker/gczydzjmd.md/blob/master/README.md)
 
 
-<img src='http://gfw-breaker.win/banned-news3/pages/p7/938210.md' width='0px' height='0px'/>
+<img src='http://gfw-breaker.win/banned-news3/pages/p4/954846.md' width='0px' height='0px'/>
