--- a/pages/p4/954713.md
+++ b/pages/p4/954713.md
@@ -1,4 +1,4 @@
-### 一段让人深思的碑文(图)
+### 大哥 我把国会变屠宰场(图)
 ------------------------
 
 #### [首页](https://github.com/gfw-breaker/banned-news3/blob/master/README.md) &nbsp;&nbsp;|&nbsp;&nbsp; [法轮功真相](https://github.com/begood0513/basic/blob/master/README.md)  &nbsp;&nbsp;|&nbsp;&nbsp; [手把手翻墙教程](https://github.com/gfw-breaker/guides/wiki)  &nbsp;&nbsp;|&nbsp;&nbsp; [一键翻墙软件](https://github.com/gfw-breaker/nogfw/blob/master/README.md)  
@@ -6,10 +6,10 @@
 
 
 <div class="article_right" style="fone-color:#000">
- <p style="text-align: center;">
-  <img alt="" src="https://img3.secretchina.com/pic/2020/10-4/p2788581a783632316-ss.gif" style="height:400px; width:600px"/>
+ <p style="text-align:center">
+  <img alt="" src="https://img3.secretchina.com/pic/2020/11-27/p2826982a259615875-ss.jpg" style="height:339px; width:600px"/>
   <br>
-   闻名世界的伦敦威斯敏斯特大教堂（图片来源：Pixabay）
+   国民党在台湾立法院议场内投掷猪内脏。（图片来源：中央社）
    <span id="hideid" name="hideid" style="color:red;display:none;">
     <span href="https://www.secretchina.com">
     </span>
@@ -21,170 +21,47 @@
 
 ---
 
-#### 💥 [《伪火》 - 天安门自焚真相 ](http://158.247.195.190:10000/videos/blog/weihuo.html)&nbsp; |&nbsp; [“1400例”谎言揭秘  ](http://158.247.195.190:10000/videos/blog/jiexi1400.html)
-
 #### [ 🎬  翻墙必看视频（YouTube热门频道、网站代理、时事热点、历史事件 ...）](https://github.com/gfw-breaker/links/blob/master/banned.md)
+
+#### [ 💥  禁书下载（政治、经济、人权、民主自由、文革、六四 ...）](https://github.com/gfw-breaker/books/blob/master/README.md)
 
 
   </div>
  </div>
  <p>
-  【看中国2020年10月4日讯】很多人后悔没有早点看到在伦敦闻名世界的威斯敏斯特大教堂地下室的
-  <span href="https://www.secretchina.com/news/gb/tag/墓碑" target="_blank">
-   墓碑
-  </span>
-  林中，有一块名扬世界的墓碑。
+  【看中国2020年12月6日讯】因为“武汉瘟疫”，不利中台来往，因此，红色媒体只好在台湾仗着言论自由，租摄影棚，找红色名嘴对台湾开骂，名嘴上台赚人民币，通过密语很简单，“只能骂台，挺中”，中共对台湾资讯认知战争，永不停歇，目标就是让台湾人讨厌民主政治，讨厌政府，把台湾斗臭、斗垮最好。现在，污辱台湾的方法，从摄影棚走向国会，丢猪内脏丑闻通往全世界，台湾人丢脸丢大。
   <span id="hideid" name="hideid" style="color:red;display:none;">
    <span href="https://www.secretchina.com">
    </span>
   </span>
  </p>
  <p>
-  其实这只是一块很普通的墓碑，粗糙的花岗石质地，造型也很一般，同周围那些质地上乘、做工优良的亨利三世到乔治二世等二十多位英国前国王墓碑，以及牛顿、达尔文、狄更斯等名人的墓碑比较起来，它显得微不足道，不值一提。并且它没有姓名，没有生卒年月，甚至上面连墓主的介绍文字也没有。
+  <strong>
+   <span href="https://www.secretchina.com/news/gb/tag/国民党" target="_blank">
+    国民党
+   </span>
+   斗臭国会
+  </strong>
  </p>
  <p>
-  但是，就是这样一块无名氏墓碑，却成为名扬全球的著名墓碑。每一个到过威斯特敏斯特大教堂的人，他们可以不去拜谒那些曾经显赫一世的英国前国王们，可以不去拜谒那诸如狄更斯、达尔文等世界名人们，但他们却没有人不来拜谒这一块普通的墓碑，他们都被这块墓碑深深地震撼着，准确地说，他们被这块墓碑上的
-  <span href="https://www.secretchina.com/news/gb/tag/碑文" target="_blank">
-   碑文
+  国会被国民党的猪内脏斗臭之后，立法院总务室说，“沾满臭味血腥的国会地毯，全新换过，破坏者国民党要付一百万”。
+ </p>
+ <p>
+  一百万可以拿到中共央视隔海寄来的鼓励掌声，不知道值不值。
+ </p>
+ <p>
+  1949年，中共赶走国民党后，承诺的多党政治，言论自由，人民当家，全面跳票，
+  <span href="https://www.secretchina.com/news/gb/tag/毛泽东" target="_blank">
+   毛泽东
   </span>
-  深深地震撼着。在这块墓碑上，刻着这样的一段话：
+  无法对人民自圆其说，因为国民党执政的言论自由，是多少的问题，而共产党的言论自由是有无的问题，没料到国民党隔海活下来，终于成为老共心头大患。如今，换了政府上台，中共对台标语口号演变成“逆共则亡”，国际上都知道，中共不吃下台湾，就无法成为合法政权，照理说，国民党对台湾民主应该更加珍惜才对，现在却倒过来，扮演摧毁民主脚色，还自得其乐。
  </p>
  <p>
-  When I was young and free and my imagination had no limits, I dreamed of changing the world.
- </p>
- <p>
-  As I grew older and wiser, I discovered the world would not change, so I shortened my sights somewhat and decided to change only my country. But it, too, seemed immovable.
- </p>
- <p>
-  As I grew my twilight years, in one last desperate attempt, I settled for changing only my family, those closest to me, but alas, they would have none of it.
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p>
-  And now, as I lie on my death bed, I suddenly realize:
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p>
-  If I had only changed myself first, then by example I would have changed my family. From their inspiration and encouragement, I would then have been able to better my country, and who knows, I may have even changed the world.
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p>
-  译文：
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p>
-  当我年轻的时候，我的想像力从没有受到过限制，我梦想改变这个世界。
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p>
-  当我成熟以后，我发现我不能改变这个世界，我将目光缩短了些，决定只改变我的国家。
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <center>
-  <ins class="adsbygoogle" data-ad-client="ca-pub-1276641434651360" data-ad-format="fluid" data-ad-layout="in-article" data-ad-slot="3646767294" style="display:block; text-align:center;">
-  </ins>
- </center>
- <p>
-  当我进入暮年后，我发现我不能改变我的国家，我的最后愿望仅仅是改变一下我的家庭。但是，这也不可能。
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p>
-  当我躺在牀上，行将就木时，我突然意识到： 如果一开始我仅仅去改变我自己，然后作为一个榜样，我可能改变我的家庭；在家人的帮助和鼓励下，我可能为国家做一些事情。然后谁知道呢？我甚至可能改变这个世界。
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p>
-  据说，许多世界政要和名人看到这块碑文时都感慨不已。有人说这是一篇人生的教义，有人说这是灵魂的一种
-  <span href="https://www.secretchina.com/news/gb/tag/自省" target="_blank">
-   自省
+  国民党对执政党的焦土战争，从反
+  <span href="https://www.secretchina.com/news/gb/tag/美猪" target="_blank">
+   美猪
   </span>
-  。
+  战场打到中天换照，12次在立法院杯葛苏贞昌，搞到“舞猪舞狗”上街头，这样子还意犹未尽；27日，更进一步把国会变成屠宰场，现在国会处处腥臭味，国会议员自取其辱，上一次国民党破坏立法院议场，欠下41万赔偿费，这一次还要赖帐吗？我建议地毯最好不要换，让立委臭一下，臭到明年。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -199,7 +76,92 @@
   </div>
  </center>
  <p>
-  当年轻的曼德拉看到这篇碑文时，顿然有醍醐灌顶之感，声称自己从中找到了改变南非甚至整个世界的金钥匙。回到南非后，这个志向远大、原本赞同以暴治暴填平种族歧视鸿沟的黑人青年，一下子改变的自己的思想和处世风格，他从改变自己、改变自己的家庭和亲朋好友着手，经历了几十年，终于改变了他的国家。
+  现在，
+  <span href="https://www.secretchina.com/news/gb/tag/习近平" target="_blank">
+   习近平
+  </span>
+  可高兴了，才刚刚介入美国大选，把美国最优良的西方民主选举斗臭斗垮，告诉美国人，“民主就是舞弊”，现在，台湾的小弟也传来捷报，终于把国会地毯搞血腥了，让民主沾上“猪下水”的味道，民主政治彻底臭了，习近平可以告诉中国人民，民主政治就是搞这种“丢猪内脏”的比赛，我们中共一党专政最好，千万不要学台湾。
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p>
+  江启臣说，“不搞杯葛，就是纵容独裁”，请问，这是杯葛吗？养猪协会很生气说，“实在太欺负猪了，这些食物有很多人最喜欢吃，非洲还有2亿人陷入饥饿，
+  <span href="https://www.secretchina.com" target="_blank">
+   中国
+  </span>
+  现在吃猪肉还要看时间，台湾蓝营立委真的太浪费，太暴殄天物了。
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p>
+  <strong>
+   国民党民调有好转吗？
+  </strong>
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p>
+  国民党青年团看到国会喷洒“猪下水汤”的闹剧，一下子昏了，前几天，国民党的有为青年还信誓旦旦说，会加入国民党，是因为这个政党有理性、专业、温和问政，话语刚说完，就被江启臣挥过来的闷棍打倒在地。
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p>
+  国民党反美猪，已经反到失去理智，到底吃下肚几公斤，没人知道。过去，瘦肉精使用标准尚未订出，反瘦肉精还有理由可以说，目前国际标准已经订出，全世界75国进口瘦肉精猪肉，台湾并非唯一，中共、韩国、日本早就开放进口，国民党真的很在意国民健康吗？或者只是作秀？骗选票，如果不吃美猪，就看清楚标示，拉倒就可以，只抓住这个话题猛打，把反美猪扩大成反政府，就好像美国的种族运动，变成反政府运动一般，难道台湾食安问题只有美猪吗？一个尽责的在野党是这样演的吗？
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p>
+  “扛猪上街”游行之后，根据蓝营智库“国家政策基金会”民调，国民党支持度上升来到20.6，只差民进党4个百分点，丢猪内脏之后，国民党网络声量来到56%，一半是负面评价，可见对于国民党从理性走向暴力，支持和反对各占一半，这个民调也显示，中间温和声音正从国民党离开，国民党正在“韩粉化”，非理性的民粹份子已经占据蓝营，有人认为国民党越来越像新党了，这是国民党的警讯。未来，中间温和理性选民会大量流失，可惜国民党只高兴在国会搞猪内脏戏码，赢到社会声量，但是，失去的却是选票，这样子真的有赚到吗？
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -232,7 +194,7 @@
   ，就可以助力我们突破审查与封锁，向至少10000位中国大陆同胞奉上独立真实的关键资讯，在危难时刻向他们发出预警，救他们于大瘟疫与其它社会危难之中。
   <center>
    <span href="https://account.secretchina.com/planshopcart.php?pid=2020plana&amp;carf=add&amp;code=b5">
-    <img src="/kzgd/ad/join_membership_728x90.jpg" width="100%"/>
+    <img src="/kzgd/ad/kzgad202010728.gif" width="100%"/>
    </span>
   </center>
   <center>
@@ -264,13 +226,13 @@
 
 <hr/>
 手机上长按并复制下列链接或二维码分享本文章：<br/>
-https://github.com/gfw-breaker/banned-news3/blob/master/pages/p4/948136.md <br/>
-<a href='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p4/948136.md'><img src='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p4/948136.md.png'/></a> <br/>
-原文地址（需翻墙访问）：https://www.secretchina.com/news/gb/2020/10/04/948136.html
+https://github.com/gfw-breaker/banned-news3/blob/master/pages/p4/954713.md <br/>
+<a href='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p4/954713.md'><img src='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p4/954713.md.png'/></a> <br/>
+原文地址（需翻墙访问）：https://www.secretchina.com/news/gb/2020/12/06/954713.html
 
 
 ------------------------
 #### [首页](https://github.com/gfw-breaker/banned-news3/blob/master/README.md) &nbsp;|&nbsp; [一键翻墙软件](https://github.com/gfw-breaker/nogfw/blob/master/README.md) &nbsp;| [《九评共产党》](https://github.com/gfw-breaker/9ping.md/blob/master/README.md#九评之一评共产党是什么) | [《解体党文化》](https://github.com/gfw-breaker/jtdwh.md/blob/master/README.md) | [《共产主义的终极目的》](https://github.com/gfw-breaker/gczydzjmd.md/blob/master/README.md)
 
 
-<img src='http://gfw-breaker.win/banned-news3/pages/p4/948136.md' width='0px' height='0px'/>
+<img src='http://gfw-breaker.win/banned-news3/pages/p4/954713.md' width='0px' height='0px'/>
